Fix section angle intro background on FireFox

--- a/src/AppBundle/Styles/modules/_SEL-Section.scss
+++ b/src/AppBundle/Styles/modules/_SEL-Section.scss
@@ -48,6 +48,7 @@ $SEL-Section-angle-size: 48px;
             position: absolute;
             top: 100%;
             z-index: -1;
+            background-size: 100% $SEL-Section-angle-size;
         }
     }
 
